Sufficient Statistic Theorem right-side justification and improvement

--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -110,22 +110,8 @@ $\begin{array}{FlM}
   \\(B).& \rvy(t)                   & an observed random process which is statistically dependent on $\rvx(t;\theta)$
   \\(C).& \fCost(\theta,\pdfp(x,y)) & be a cost function.
 \end{array}$
-%20190805%\tbox{
-%20190805%\setlength{\unitlength}{0.15mm}
-%20190805%\begin{picture}(200,100)(-50,-50)
-%20190805%  \thicklines
-%20190805%  %\graphpaper[10](0,0)(700,100)
-%20190805%  \put(- 50,  10){\makebox ( 50, 50)[b]{$\rvx(t)$}            }
-%20190805%  \put(- 50,   0){\vector  (  1,  0)   {50}                }
-%20190805%  \put(   0, -50){\framebox(100,100)[c]{}                  }
-%20190805%  \put(   0, -20){\makebox (100, 50)[t]{stochastic}        }
-%20190805%  \put(   0, -20){\makebox (100, 50)[b]{operator}          }
-%20190805%  \put( 100,  10){\makebox ( 50, 50)[b]{$\rvy(t)$}            }
-%20190805%  \put( 100,   0){\vector  (  1,  0)   {50}                }
-%20190805%\end{picture}
-%20190805%}
 \\
-Then the following \fnctd{estimate}s are defined as described here:
+Then the following \fnctd{estimate}s are defined as follows:
 \defbox{\begin{array}{FMMlc>{\ds}l}
      (1).&\fnctd{Bayesian estimate}                         &                          & \estB   &\eqd& \argmin_{\theta} C(\theta,\pdfp(x,y))
    \\(2).&\fnctd{Mean square estimate}                      &(``\fnctd{MS  estimate}") & \estMS  &\eqd& \argmin_{\theta} \E\norm{C(\theta,\pdfp(x,y))}^2
