--- a/common/probspace.tex
+++ b/common/probspace.tex
@@ -522,6 +522,26 @@ with \fncte{probability density function} $\ppx(x)$ and
   \end{array}}
 \end{proposition}
 
+%---------------------------------------
+\begin{theorem}[\thmd{Bayes' Rule}]
+%---------------------------------------
+\thmbox{
+  \psP(\setX|\setY) = \frac{\psP(\setY|\setX)\psP(\setX)}{\psP(\setY)}
+  }
+\end{theorem}
+\begin{align*}
+  \psP(\setX|\setY) 
+    &\eqd \frac{\psP(\setX\seti\setY)}{\psP(\setY)}
+    && \text{by definition of \fncte{conditional probability}}
+    && \text{\xref{def:conprob}}
+  \\&= \frac{\psP(\setY\seti\setX)}{\psP(\setY)}
+    && \text{by \prope{commutative} property of $\seti$}
+  \\&= \frac{\psP(\setY|\setX)\psP(\setX)}{\psP(\setY)}
+    && \text{by definition of \fncte{conditional probability}}
+    && \text{\xref{def:conprob}}
+\end{align*}
+
+
 %=======================================
 \section{Examples}
 \label{sec:probspace_examples}
