--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -12,10 +12,9 @@
 \begin{theorem}
 \label{thm:mse_mean}
 %---------------------------------------
-Let $\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ with $\sum_{n=1}^{\xN}\lambda_n=1$
+Let $\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ with $\ds\sum_{n=1}^{\xN}\lambda_n=1$
 be the \fncte{arithmetic mean} \xref{def:am}.
-
-\thmbox{
+\thmbox{%
   \brb{\begin{array}{FMD}
       (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
     \\(B).& $\mean\eqd\pE\rvx_n$                             & and
@@ -142,7 +141,7 @@ window function, like the \fncte{Hanning window}\footnote{
 illustrated below, yield the best $\mse(\meanest)$?
 \\\indentx\includegraphics{graphics/hanninglp50.pdf}
 \\
-\prefpp{prop:lambda_sq} answers question (2) stating
+\prefpp{thm:lambda_sq} answers question (2) stating
 that the best sequence in terms of minimal $\mse$
 is the sequence $\seqn{\lambda_n}\eqd\frac{1}{\xN}\seqn{\ldots,1,1,1,\ldots}$,
 which is the \fncte{average} estimator,
@@ -153,6 +152,10 @@ That is, it turns out that $\frac{1}{\xN}\le\sum\lambda_n^2$ for all possible se
 This fact is demonstrated by \pref{lem:lambda_sq} (next),
 which in turn follows more or less directly from the ubiquitous 
 \ineqe{Cauchy-Schwarz Inequality} \xxref{thm:seq_cs}{thm:cs}.
+
+Even further strengthening the average as choice estimator is \prefpp{cor:mean_white_gaussian}
+which demonstrates that in the case where $\seqn{\rvx_n$} is \prope{uncorrelated} and 
+\prope{Gaussian}, then the optimal maximum likelihood estimator is the average.
 
 %---------------------------------------
 \begin{lemma}
@@ -195,15 +198,15 @@ which in turn follows more or less directly from the ubiquitous
 \end{proof}
 
 %---------------------------------------
-\begin{proposition}
-\label{prop:lambda_sq}
+\begin{theorem}
+\label{thm:lambda_sq}
 %---------------------------------------
 Let $\mse(\text{average mean})$ be the mean square error of the \fncte{average} estimator \xref{cor:mse_average}
 and $\mse(\text{arithmetic mean})$ be the mean square error of the \fncte{arithmetic} estimator \xref{thm:mse_mean}.
 \propbox{
   \mse(\text{average mean}) \le \mse(\text{arithmetic mean})
   }
-\end{proposition}
+\end{theorem}
 \begin{proof}
 \begin{align*}
   \mse(\text{average mean}) 
@@ -214,6 +217,38 @@ and $\mse(\text{arithmetic mean})$ be the mean square error of the \fncte{arithm
   \\&= \mse(\text{arithmetic mean})
     && \text{by \prefp{thm:mse_mean}}
 \end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:mean_white_gaussian}
+%---------------------------------------
+\corbox{
+  \brb{\begin{array}{FMD}
+      (A). & $\seqn{\rvx_n}$ is \prope{uncorrelated} & and
+    \\(B). & $\rvx_n$ is \prope{Gaussian}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FMD}
+      (1). & $\ds\estML[\mu] = \frac{1}{\xN}\sum_{n=1}^{\xN} \rvx_n$ & and
+    \\(2). & $\estML[\mu]$ is \prope{consistent}              & and
+    \\(3). & $\estML[\mu]$ is \prope{efficient}               &
+  \end{array}}
+  }
+\end{corollary}
+\begin{proof}
+This result follows directly from \prefpp{thm:estML-CR} with
+\\\indentx$\begin{array}{rc>{\ds}lM}
+   \rvy(t)          &\eqd& \rvx(t;\theta) + \fv(t) & where $\fv(t)$ is a \prope{zero-mean} white Gaussian noise process
+   \\\rvx(t;\theta) &\eqd& \fg(\theta)
+   \\               &\eqd& \theta
+   \\               &\eqd& \mu
+   \\\rvx_n         &\eqd& \fdoty_n
+   \\               &\eqd& \inprod{\fy(t)}{\fpsi_n(t)}
+   \\               &\eqd& \inprod{\fy(t)}{\delta(t-n\tau)}
+   \\               &\eqd& \int_{t\in\R} \fy(t) \delta(t-n\tau) \dt
+   \\               &=&    \fy(n\tau)
+\end{array}$
 \end{proof}
 
 %=======================================
